# alpine-iot

./: README.md  alpine-iot-abuild.sh
avr-libc/: APKBUILD
avrdude/: APKBUILD  avrdude-6.3-ch341.patch  avrdude-6.3-libusb_exit.patch
binutils-avr/: APKBUILD
gcc-avr/: APKBUILD
hts_engine/: APKBUILD
htsvoice-mei/: APKBUILD
libftdi1/: APKBUILD
linux-iot/: APKBUILD  config-iot.x86  config-iot.x86_64
open_jtalk/: APKBUILD
php5/: APKBUILD
tools/: jtalk-etalk.sh  tcpdump.sh
v3.11/avrdude/: avrdude-6.3-svn1435.patch
v3.11/cycfx2prog/: APKBUILD  cycfx2prog-0.47-eeprom.patch
v3.11/digispark/: APKBUILD
v3.11/linux-iot/: APKBUILD  config-iot.x86
v3.11/sdcc/: APKBUILD
v3.11/virtualbox-guest-additions/: APKBUILD
v3.11/virtualbox-guest-modules-lts/: APKBUILD
v3.13/cycfx2prog/: APKBUILD
v3.13/hex2bix/: APKBUILD  hex2bix-version.patch
v3.13/linux-iot/: APKBUILD  config-iot.x86  config-virt.x86.patch
v3.13/micronucleus/: APKBUILD
v3.13/perl-usb-libusb/: APKBUILD
v3.13/sdcc/: APKBUILD
v3.13/virtualbox-guest-additions/: APKBUILD
v3.13/virtualbox-guest-modules-lts/: APKBUILD
v3.13/vmod-parseform/: APKBUILD  vmod_parseform.c.6.5.1.patch
v3.15/avrdude/: APKBUILD  avrdude-6.4-ftdi.patch
v3.15/digispark/: APKBUILD  DigiMouse.patch
v3.15/fxload/: APKBUILD
v3.15/hex2bix/: hex2bix-checksum.patch
v3.15/linux-lts/: APKBUILD  virt.x86_64.config
v3.15/micronucleus/: APKBUILD
v3.15/sdcc/: APKBUILD
v3.15/vmod-parseform/: APKBUILD
v3.24/micronucleus/: Makefile.in  configure.in
v3.5/: alpine-iot-abuild.sh
v3.7/: alpine-iot-abuild.sh
(+75 files in other folders)
